discussion/kv_engine/148872/148872_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

WIP: Add writeDocs histograms

Change-Id: Icfe45d61d31efa873317ada7410053754f3f91a7

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Scott Lashley
Date: 2021-03-17 18:28:13.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-03-17 19:44:44.000000000
Message: 
Patch Set 1: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/29459/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:2519:25:
error: no member named "GetHistograms" in "magma::Magma"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/29459/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/34323/ : FAILURE

Compile error at ..\kv_engine\engines\ep\src\magma-kvstore\magma-kvstore.cc(2519): error C2039: "GetHistograms": is not a member of "magma::Magma" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/34323/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/7731/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:2519:25: error: no member named "GetHistograms" in "magma::Magma" [clang-diagnostic-error]
    auto histo = magma->GetHistograms();
                        ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/7731/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:2519:25:
error: no member named "GetHistograms" in "magma::Magma" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/7731/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/8352/ : FAILURE

Compile error at [2021-03-17T18:34:20.974Z] ../kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:2519:25:
error: no member named "GetHistograms" in "magma::Magma"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/8352/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/9436/ : FAILURE

Compile error at [2021-03-17T19:27:56.567Z] ../kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:2519:25:
error: ?class magma::Magma? has no member named ?GetHistograms?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/9436/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/9646/ : FAILURE

Compile error at [2021-03-17T19:16:41.243Z] ../kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:2519:25:
error: no member named "GetHistograms" in "magma::Magma"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/9646/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/17201/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/6272/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/9291/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Scott Lashley
Date: 2021-03-20 00:00:54.000000000
Message: 
Abandoned
----------------------------------------------------------------------------------------------------------------------
